[gd_scene load_steps=19 format=3 uid="uid://dpid6r2byfatg"]

[ext_resource type="Script" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/player_hud.gd" id="1_5yyje"]
[ext_resource type="Texture2D" uid="uid://b060aig7de7iq" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/crosshair/crosshair-dot.svg" id="1_dickr"]
[ext_resource type="Texture2D" uid="uid://dqhswaawijyuo" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/crosshair/crosshair-left-outline.svg" id="2_eemof"]
[ext_resource type="PackedScene" uid="uid://t761v52jaut7" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/weapon_select_layout.tscn" id="2_qwc6o"]
[ext_resource type="Texture2D" uid="uid://dhnougn7pu2y" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/crosshair/crosshair-left-side.svg" id="3_cwluv"]
[ext_resource type="Shader" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/crosshair.gdshader" id="3_lhaju"]
[ext_resource type="Texture2D" uid="uid://b76xm3v6pcycx" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/crosshair/crosshair-right-outline.svg" id="4_kngmk"]
[ext_resource type="Texture2D" uid="uid://csq8ukfli22mt" path="res://controllers/scripts/majikayo/weapon_manager/player_hud/crosshair/crosshair-right-side.svg" id="5_7d2a5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_osjyk"]
shader = ExtResource("3_lhaju")
shader_parameter/filled_percent = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_madth"]
shader = ExtResource("3_lhaju")
shader_parameter/filled_percent = 1.0

[sub_resource type="GDScript" id="GDScript_b5586"]
script/source = "extends Label


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	self.text = \"Speed: \" + str($\"../..\".player.velocity.length()).left(5) + \" m/s\"
"

[sub_resource type="GDScript" id="GDScript_h48j3"]
script/source = "extends Label


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	self.text = \"FPS: \" + str(Engine.get_frames_per_second())
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kvhct"]
bg_color = Color(0, 0, 0, 0.172549)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_25pvy"]
font_size = 18
font_color = Color(0.439216, 0.803922, 1, 1)
outline_size = 2
outline_color = Color(0.439216, 0.803922, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gmntl"]
font_size = 54
font_color = Color(0.439216, 0.803922, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfrno"]
bg_color = Color(0, 0, 0, 0.172549)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_7g4w4"]
font_size = 36
font_color = Color(0.439216, 0.803922, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8kosc"]
font_color = Color(0.439216, 0.803922, 1, 1)

[node name="PlayerHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5yyje")
weapon_select_layout = ExtResource("2_qwc6o")

[node name="WeaponSwitchMenu" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 130.0
grow_horizontal = 2
alignment = 1

[node name="1" type="VBoxContainer" parent="WeaponSwitchMenu"]
layout_mode = 2

[node name="2" type="VBoxContainer" parent="WeaponSwitchMenu"]
layout_mode = 2

[node name="3" type="VBoxContainer" parent="WeaponSwitchMenu"]
layout_mode = 2

[node name="4" type="VBoxContainer" parent="WeaponSwitchMenu"]
layout_mode = 2

[node name="5" type="VBoxContainer" parent="WeaponSwitchMenu"]
layout_mode = 2

[node name="6" type="VBoxContainer" parent="WeaponSwitchMenu"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dot" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("1_dickr")

[node name="HealthBarOutline" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("2_eemof")

[node name="HealthBar" type="TextureRect" parent="CenterContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_osjyk")
layout_mode = 2
texture = ExtResource("3_cwluv")

[node name="AmmoBarOutline" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("4_kngmk")

[node name="AmmoBar" type="TextureRect" parent="CenterContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_madth")
layout_mode = 2
texture = ExtResource("5_7d2a5")

[node name="DebugVBox" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -172.0
offset_top = 17.0
offset_right = -22.0
offset_bottom = 67.0
grow_horizontal = 0
mouse_filter = 2

[node name="Speed" type="Label" parent="DebugVBox"]
layout_mode = 2
text = "Speed: 0 m/s"
script = SubResource("GDScript_b5586")

[node name="FPS" type="Label" parent="DebugVBox"]
layout_mode = 2
text = "FPS:  60"
script = SubResource("GDScript_h48j3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -144.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HealthBox" type="Panel" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kvhct")

[node name="HealthTitle" type="Label" parent="MarginContainer/HBoxContainer/HealthBox"]
layout_mode = 0
offset_left = 18.0
offset_top = 78.0
offset_right = 87.0
offset_bottom = 104.0
text = "HEALTH"
label_settings = SubResource("LabelSettings_25pvy")

[node name="HealthLabel" type="Label" parent="MarginContainer/HBoxContainer/HealthBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 130.0
offset_top = 22.0
offset_right = 222.0
offset_bottom = 96.0
text = "100"
label_settings = SubResource("LabelSettings_gmntl")

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AmmoBox" type="Panel" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 75)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tfrno")

[node name="AmmoTitle" type="Label" parent="MarginContainer/HBoxContainer/AmmoBox"]
layout_mode = 0
offset_left = 21.0
offset_top = 41.0
offset_right = 81.0
offset_bottom = 67.0
text = "AMMO"
label_settings = SubResource("LabelSettings_25pvy")

[node name="ClipAmmoLabel" type="Label" parent="MarginContainer/HBoxContainer/AmmoBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 109.0
offset_top = 12.0
offset_right = 150.0
offset_bottom = 62.0
text = "15"
label_settings = SubResource("LabelSettings_7g4w4")
horizontal_alignment = 1
vertical_alignment = 2

[node name="ReserveAmmoLabel" type="Label" parent="MarginContainer/HBoxContainer/AmmoBox"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 170.0
offset_top = 13.0
offset_right = 232.0
offset_bottom = 63.0
text = "∞"
label_settings = SubResource("LabelSettings_7g4w4")
horizontal_alignment = 1
vertical_alignment = 2

[node name="KeyInfo" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 18.0
offset_top = 196.0
offset_right = 262.0
offset_bottom = 504.0
text = "操作说明：
显示鼠标 - Esc
切换武器 - 数字 1 ~ 4 / 滚轮
移动 - WASD；跑 - Shift；
蹲 - C；跳 - 空格；交互 - E
开火 - 鼠标左键；换弹 - R

切换 noclip 模式 - V
调整 noclip 移速 - Ctrl + 滚轮
noclip 下高速移动 - Shift
切换第一/第三人称视角 - H
调整摄像机镜头 - Ctrl + 滚轮
"
label_settings = SubResource("LabelSettings_8kosc")
horizontal_alignment = 1
